<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FF0A"
    tools:context=".PlaybackFragment">

    <Button
        android:id="@+id/playbackingButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:text="@string/playbackingButton"
        android:textSize="20dp" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/returnButton"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/playbackText"
        android:textSize="40dp" />
</FrameLayout>