<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/playbackButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/playbackButton"
        android:textSize="20dp" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:text="@string/recordButton"
        android:textSize="23dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/homeText"
        android:textSize="40dp" />
</FrameLayout>